More UI & Data Structure Improvements